Changed button style for fashioner and cooler ones. Solved layout issues in wardrobe-view

--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,9 @@ img {
     border: 0;  
 }
 
-ul {
+/*ul {
     list-style: none;
-}
+}*/
 
 a {
     text-decoration: none;
@@ -47,45 +47,53 @@ a {
     margin-top: 10px;
 }
 
-.button {
-    /*background-image: url(../images/button_background.png);*/
-    /***Gradient***/
-    background-image: linear-gradient(bottom, #E8F2FF 21%, #70A2E3 61%, #70A2E3 81%);
-    background-image: -o-linear-gradient(bottom, #E8F2FF 21%, #70A2E3 61%, #70A2E3 81%);
-    background-image: -moz-linear-gradient(bottom, #E8F2FF 21%, #70A2E3 61%, #70A2E3 81%);
-    background-image: -webkit-linear-gradient(bottom, #E8F2FF 21%, #70A2E3 61%, #70A2E3 81%);
-    background-image: -ms-linear-gradient(bottom, #E8F2FF 21%, #70A2E3 61%, #70A2E3 81%);
-    background-image: -webkit-gradient(
-            linear,
-            left bottom,
-            left top,
-            color-stop(0.21, #E8F2FF),
-            color-stop(0.61, #70A2E3),
-            color-stop(0.81, #70A2E3)
-    );
+/* Source: http://papermashup.com/pretty-css3-buttons/ */
+.button, .button:visited {
+    background: #222 url(../images/overlay.png) repeat-x;
+    display: inline-block;
+    padding: 5px 10px 6px;
+    margin-top: 10px;
+    color: #fff;
+    text-decoration: none;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+    position: relative;
+    cursor: pointer;
     
-    /* Declare border first and then make rounded */
-    border: solid 1px #cccccc;
-    border-radius: 10px;
-    /* Included for compatibility */
-    -moz-border-raidus:10px;
-    -webkit-border-radius:10px;
-    
-    box-shadow: 5px 5px 5px #888888;
-    height: 26px;
+    width: 150px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
 }
 
-button.button {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    cursor: pointer;
+.medium.button, .medium.button:visited { 
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 1;
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
 }
-/*
-button::-moz-focus-inner {
-  border: 0;
+
+.blue.button, .blue.button:visited { 
+    background-color: #2981e4; 
 }
-*/
+.blue.button:hover { 
+    background-color: #2575cf; 
+}
+
+.marine.button, .blue.button:visited { 
+    background-color: #0066cc; 
+}
+.marine.button:hover { 
+    background-color: #3399ff; 
+}
+
+
+
+
 .subheader {
     color: #8B9EE3;
     font-family: Arial;
