--- a/css/overview.css
+++ b/css/overview.css
@@ -36,9 +36,10 @@ button:focus {
 }
 
 #wardrobe-view {
-    width: 420px; 
+    width: 380px; 
     float: left;
     margin-bottom: 11px;
+    margin-left: 11px;
     
     border: 1px solid #CCCCCC;
     box-shadow: 10px 10px 5px #888888;
@@ -59,8 +60,7 @@ button:focus {
             color-stop(0.71, #70A2E3),
             color-stop(0.91, #70A2E3)
     );
-    position: absolute; 
-/* DANGER!!! */
+    
 }
 
 #wardrobe-schema {
@@ -68,11 +68,8 @@ button:focus {
     border-width: 1px;*/
     margin-top: 30px;
     margin-left: 25px;
-    width: 180px;
+    width: 150px;
     text-align: center;
-}
-
-table {
     empty-cells: show;
     font-size: 13px;
     padding-bottom: 25px;
@@ -104,8 +101,16 @@ table {
 }
 
 .war-button {
-    margin-left: 230px; 
-    position: absolute; 
-    left: 20px; 
     width: 120px;
+    margin-top: 30px;
+}
+
+#wardrobe-info {
+    margin-top: 50px;
+    margin-right: 15px;
+    font-family: 'Times New Roman',Times,serif;
+    font-size: 16px;
+    float: right; 
+    width: 150px;
+    text-align: center;
 }
